# Omega-LegalCitator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml
data/authority_seeds/: structural_impossibility.json
data/schemas/: authority_graph.schema.json  citation_audit.schema.json  citation_object.schema.json
docs/: ARCHITECTURE.md  ROADMAP.md  SOURCES.md
docs/adr/: ADR-001-legal-information-infrastructure.md
src/omega_legal_citator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/omega_legal_citator/cli/: main.py
src/omega_legal_citator/connectors/: base.py  registry.py
src/omega_legal_citator/core/: citation_audit.py  citation_parser.py  framework_stack.py  pipeline.py
src/omega_legal_citator/models/: audit.py  authority.py  authority_graph.py  citation.py  framework_stack.py
tests/: test_citation_parser.py  test_legal_infrastructure_pipeline.py
